--- a/index.css
+++ b/index.css
@@ -1,49 +1,106 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    color: #333;
+body, ul {
+    margin: 0;
+    padding: 0;
+}
+
+nav {
+    background-color: #333;
+    position: sticky;
+    top: 0;
+    width: 100%;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: space-around;
+}
+
+nav ul li {
+    display: inline;
+}
+
+nav ul li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+nav ul li a:hover {
+    background-color: #575757;
+    transition: background-color 0.3s ease;
 }
 
 .container {
-    max-width: 800px;
-    margin: 0 auto;
+    margin: 20px;
     padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 1200px;
+    background-color: #f4f4f4;
+    border-radius: 10px;
 }
 
-h1 {
-    text-align: center;
-    color: #4CAF50;
-}
-
-#controls {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
-}
-
-#book-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    gap: 20px;
-}
-
-.book-item {
+button {
     padding: 10px;
-    background-color: #e9e9e9;
-    border-radius: 5px;
-    text-align: center;
+    margin: 5px;
+    background-color: grey;
+    color: white;
+    border: none;
+    cursor: pointer;
 }
 
-#pagination {
-    display: flex;
-    justify-content: center;
+button:hover {
+    background-color: grey;
+}
+
+
+#pagination-container {
     margin-top: 20px;
 }
 
-#error-message {
-    color: red;
+#books-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Automatically fill with columns */
+    gap: 20px;
+    margin-top: 20px;
+}
+
+div#books-container div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid black;
+    padding: 10px;
+    background-color: #d6f5f4;
+    border-radius: 7px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    margin: 10px;
+    display: inline-block;
+    width: 200px;
     text-align: center;
+    max-width: 100%;
+    overflow: hidden;
+}
+
+#books-container img{
+    width:100%;
+    height:auto;
+    object-fit: cover;
+    border-radius: 6px;
+    margin-bottom: 10px;
+}
+
+#books-container div .description {
+    font-size: 14px;
+    color: #666;
+    margin-bottom: 10px;
+    overflow: hidden;
+    text-overflow: ellipsis; 
+    display: -webkit-box;
+    -webkit-line-clamp: 3; 
+    -webkit-box-orient: vertical;
 }
